# Begum

./: .gitignore  README.md
begum/: Begum.py
begum-rs/: Cargo.toml
begum-rs/src/: args.rs  dna.rs  filter.rs  lib.rs  main.rs  sort.rs
begum-rs/tests/: integration.rs
docs/: 2026-03-06-python3-port.md  claude-code-session.md
src/: Begum.py  sort.py
test/: generate_complex_dataset.py  pools.txt  primers.txt  reads.fastq  reads_pool2.fastq  run_test.py  samples.txt  tags.txt
test/tutorial/: README.md  pools.txt  primers.txt  samples.txt  tags.txt
tutorial/: README.md  generate_complex_dataset.py  pools.txt
