[package]
name = "begum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "begum"
path = "src/main.rs"

[lib]
name = "begum"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
indexmap = "2"
log = "0.4"
needletail = "0.5"

[dev-dependencies]
tempfile = "3"
